--- a/priv/www/css/kha.css
+++ b/priv/www/css/kha.css
@@ -30,6 +30,19 @@ input {
   cursor: pointer;
 }
 
+#login-container {
+  position: absolute;
+  top: 0;
+  right: 15em;
+  border-radius: 0px 0px 10px 10px; 
+  -moz-border-radius: 0px 0px 10px 10px; 
+  -webkit-border-radius: 0px 0px 10px 10px; 
+  border-width: 0 1px 1px 1px;
+  border-style: solid;
+  border-color: #aaa;
+  padding: 0 7px 7px 7px;
+}
+
 #github {
   background-color: #a00;
   overflow: hidden;
